--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="game" height="800px" width="800px;"></canvas>
+    <canvas id="game" height="600px" width="300px"></canvas>
 </body>
 <style>
     canvas {
